# spatialTemporalDecisions

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  notes.org  sims.org  writeup.org  writeup.tex
banditExample/: bandit.py  plot_res.R  plot_res.py
scripts/: run.sh  runCrp1000For25.sh  runCrp1000For25Log.sh  runEdgeToEdge.sh  runEdgeToEdgeLog.sh  runEdgeToEdgeToy.sh  runEdgeToEdgeToyLog.sh  runEdgeToEdgeWns.sh  runEdgeToEdgeWnsLog.sh  runSpatial.sh  runSpatialLog.sh  runSpatialToy.sh  runSpatialToyLog.sh  runSpatialWns.sh  runSpatialWnsLog.sh  runTune.sh  runTuneLog.sh  runWithLog.sh
scripts/individualRunners/: runCrpCorr.sh  runCrpSpatialCorr.sh  runCrpSpatialCorrLog.sh  runCrpSpatialMiss.sh  runCrpSpatialMissLog.sh  runGridEdgeCorr.sh  runGridEdgeCorrLog.sh  runGridEdgeMiss.sh  runGridEdgeMissLog.sh  runGridSpatialCorr.sh  runGridSpatialCorrLog.sh  runGridSpatialMiss.sh  runGridSpatialMissLog.sh  runRandEdgeCorr.sh  runRandEdgeCorrLog.sh  runRandEdgeMiss.sh  runRandEdgeMissLog.sh  runRandSpatialCorr.sh  runRandSpatialCorrLog.sh  runRandSpatialMiss.sh  runRandSpatialMissLog.sh  runScalefreeEdgeCorr.sh  runScalefreeEdgeCorrLog.sh  runScalefreeEdgeMiss.sh  runScalefreeEdgeMissLog.sh  runWnsEdgeCorr.sh  runWnsEdgeCorrLog.sh  runWnsEdgeMiss.sh  runWnsEdgeMissLog.sh  runWnsSpatialCorr.sh  runWnsSpatialCorrLog.sh  runWnsSpatialMiss.sh  runWnsSpatialMissLog.sh
scripts/plotting/: animateSpread.R  averageInfection.R  bayesP.R  covariatePostDist.R  observedInfection.R  treatmentLocations.R  valuePlot.R  weightHist.R
scripts/results/: createTables.py  myopicAgreement.R  parPostDist.py  parseResults.py
src/: agent.cpp  agent.hpp  agentTime.mk  allAgent.cpp  allAgent.hpp  anchorMan.cpp  anchorMan.hpp  bayesP.cpp  bayesP.hpp  bayesP.mk  bayesPsamplesBR.cpp  bayesPsamplesBR.mk  calcCentrality.hpp  data.hpp  dataDepth.cpp  densityEst.cpp  densityEst.hpp  features.cpp  features.hpp  featuresInt.cpp  featuresInt.hpp  fitModel.cpp  fitModel.hpp  fitModel.mk  fitWindow.cpp  fitWindow.mk  genToyNets.R  getCov.cpp  getDist.cpp  global.mk  incremAgent.cpp  isConnected.cpp  m1HybridOptim.cpp  m1HybridOptim.hpp  m1NmOptim.cpp  m1NmOptim.hpp  m1OsspOptim.cpp  m1OsspOptim.hpp  m1SgdOptim.cpp  m1SgdOptim.hpp  (+396 more)
src/main/: CMakeLists.txt  agent.cpp  agent.hpp  allAgent.cpp  allAgent.hpp  bayesP.cpp  bayesP.hpp  bayesPsamplesBR.cpp  bayesPsamplesBR.hpp  calcCentrality.cpp  calcCentrality.hpp  copyParams.cpp  data.cpp  data.hpp  dataDepth.cpp  dataDepth.hpp  densityEst.cpp  densityEst.hpp  features.cpp  features.hpp  getCov.cpp  getDist.cpp  isConnected.cpp  m1SpOptim.cpp  m1SpOptim.hpp  mcmcEdgeToEdge2.cpp  mcmcEdgeToEdge2.hpp  mcmcGravity.cpp  mcmcGravity.hpp  mcmcGravity2.cpp  mcmcGravity2.hpp  mergeClusters.cpp  model.cpp  model.hpp  model2EdgeToEdge.cpp  model2EdgeToEdge.hpp  model2GPowGDist.cpp  model2GPowGDist.hpp  model2GravityEDist.cpp  model2GravityEDist.hpp  (+103 more)
src/old/: agentTime.cpp  agentTime.hpp  bayesP.mk  fitModel.cpp  fitModel.hpp  fitWindow.hpp  global.mk  incremAgent.cpp  incremAgent.hpp  m1HybridOptim.hpp  m1SgdOptim.cpp  m2NmOptim.cpp  m2NmOptimOld.cpp  m2NmOptimOld.hpp  m2QOptim.hpp  m2RandOptim.cpp  m2SaOptim.hpp  mcmcCave.cpp  mcmcCave.hpp  mcmcGDistPow.cpp  mcmcGDistPow.hpp  mcmcGravityTimeInf.hpp  mcmcGravityTimeInfExpCaves.hpp  mcmcGravityTimeInfExpCavesTrend.hpp  mcmcGravityTimeInfExpCavesTrendPow.cpp  mcmcGravityTimeInfExpCavesTrendPowCon.cpp  mcmcGravityTimeInfExpRCaves.hpp  mcmcGravityTimeInfExpTrend.hpp  mcmcGravityTimeInfExpTrendPow.cpp  mcmcGravityTimeInfTrend.cpp  mcmcGravityTimeInfTrend.hpp  mcmcGravityTimeInfTrendPowCon.cpp  mcmcGravityTimeInfTrendPowCon.hpp  mcmcGravityTrend.cpp  mcmcGravityTrend.hpp  mcmcGravityTrendPow.cpp  mcmcGravityTrendPowCon.cpp  mcmcGravityTrendPowCon.hpp  mcmcRad.cpp  mcmcRad.hpp  (+118 more)
src/test/: CMakeLists.txt  a.out  test_features.cpp  test_model.cpp  test_preCompData.cpp  test_rankAgent.cpp  test_runStats.cpp  test_system.cpp  test_utilities.cpp
